Add welcome message

--- a/index.html
+++ b/index.html
@@ -2,8 +2,17 @@
 <html>
 <head>
 	<title>ermondel.github.io</title>
+	<style type="text/css">
+		body { padding-top: 5%; padding-left: 5%; }
+		h1 { color: grey; }
+	</style>
 </head>
 <body>
-    <p>ermondel.github.io</p>
+
+    <h1>Welcome to ermondel.github.io</h1>
+
+	<ul>
+		<li>...</li>
+	</ul>
 </body>
 </html>
