Add link to frogger game and some design to index page

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 	<style type="text/css">
 		body { padding-top: 5%; padding-left: 5%; }
 		h1 { color: grey; }
+		a { color: #6186c6; text-decoration: none; }
+		a:hover { text-decoration: underline; }
 	</style>
 </head>
 <body>
@@ -12,7 +14,7 @@
     <h1>Welcome to ermondel.github.io</h1>
 
 	<ul>
-		<li>...</li>
+		<li><a href="https://ermondel.github.io/frogger/" target="_blanc">frogger game</a></li>
 	</ul>
 </body>
 </html>
