--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <h1>Welcome to ermondel.github.io</h1>
 
 	<ul>
-		<li><a href="https://ermondel.github.io/frogger/" target="_blanc">frogger game</a></li>
+		<li><a href="https://ermondel.github.io/frogger/" target="_blanc">Frogger Game</a></li>
+		<li><a href="https://ermondel.github.io/memorypair/" target="_blanc">Memory Pair Game</a></li>
 	</ul>
 </body>
 </html>
