Add frontend-nanodegree-mobile-portfolio to projects

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 	<ul>
 		<li><a href="https://ermondel.github.io/frogger/" target="_blanc">Frogger Game</a></li>
 		<li><a href="https://ermondel.github.io/memorypair/" target="_blanc">Memory Pair Game</a></li>
+		<li><a href="https://ermondel.github.io/frontend-nanodegree-mobile-portfolio/" target="_blanc">Frontend nanodegree mobile portfolio</a></li>
 	</ul>
 </body>
 </html>
