--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <h1>Welcome to ermondel.github.io</h1>
 
 	<ul>
+		<li><a href="https://ermondel.github.io/pizza-app/" target="_blanc">Pizza app</a></li>
+		<li><a href="https://ermondel.github.io/weather-app/" target="_blanc">Weather app</a></li>
 		<li><a href="https://ermondel.github.io/html5-forms/" target="_blanc">HTML5: Forms</a></li>
 		<li><a href="https://ermondel.github.io/frontend-nanodegree-mobile-portfolio/" target="_blanc">Frontend nanodegree mobile portfolio</a></li>
 		<li><a href="https://ermondel.github.io/memorypair/" target="_blanc">Memory Pair Game</a></li>
