feat: add footer with copyright and year info

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 		h1 { color: grey; }
 		a { color: #6186c6; text-decoration: none; line-height: 1.5em; }
 		a:hover { text-decoration: underline; }
+		ul { margin-bottom: 200px; }
+		footer { font-size: small; color: grey; }
 	</style>
 </head>
 <body>
@@ -21,5 +23,7 @@
 		<li><a href="https://ermondel.github.io/memorypair/" target="_blanc">Memory Pair Game</a></li>
 		<li><a href="https://ermondel.github.io/frogger/" target="_blanc">Frogger Game</a></li>
 	</ul>
+
+	<footer>© 2019</footer>
 </body>
 </html>
