--- a/index.html
+++ b/index.html
@@ -1,29 +1,34 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>ermondel.github.io</title>
-	<style type="text/css">
-		body { padding-top: 5%; padding-left: 5%; font-size: 20px; }
-		h1 { color: grey; }
-		a { color: #6186c6; text-decoration: none; line-height: 1.5em; }
-		a:hover { text-decoration: underline; }
-		ul { margin-bottom: 200px; }
-		footer { font-size: small; color: grey; }
-	</style>
-</head>
-<body>
-
-    <h1>Welcome to ermondel.github.io</h1>
-
-	<ul>
-		<li><a href="https://ermondel.github.io/pizza-app/" target="_blanc">Pizza app</a></li>
-		<li><a href="https://ermondel.github.io/weather-app/" target="_blanc">Weather app</a></li>
-		<li><a href="https://ermondel.github.io/html5-forms/" target="_blanc">HTML5: Forms</a></li>
-		<li><a href="https://ermondel.github.io/frontend-nanodegree-mobile-portfolio/" target="_blanc">Frontend nanodegree mobile portfolio</a></li>
-		<li><a href="https://ermondel.github.io/memorypair/" target="_blanc">Memory Pair Game</a></li>
-		<li><a href="https://ermondel.github.io/frogger/" target="_blanc">Frogger Game</a></li>
-	</ul>
-
-	<footer>© 2019</footer>
-</body>
+  <head>
+    <title>ermondel.github.io</title>
+    <style type="text/css">
+      body {
+        padding-top: 5%;
+        padding-left: 5%;
+        font-size: 20px;
+      }
+      h1 {
+        color: grey;
+      }
+      a {
+        color: #6186c6;
+        text-decoration: none;
+        line-height: 1.5em;
+      }
+      a:hover {
+        text-decoration: underline;
+      }
+      ul {
+        margin-bottom: 200px;
+      }
+      footer {
+        font-size: small;
+        color: grey;
+      }
+    </style>
+  </head>
+  <body>
+    under maintenance
+  </body>
 </html>
