feat: add background and brief info

--- a/index.html
+++ b/index.html
@@ -1,34 +1,30 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <title>ermondel.github.io</title>
-    <style type="text/css">
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0"
+    />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>ermondel github</title>
+    <link rel="stylesheet" href="./normalize.css" />
+    <style>
       body {
-        padding-top: 5%;
-        padding-left: 5%;
-        font-size: 20px;
+        background: url('./Kamianets.jpg');
+        font-family: Arial, Helvetica, sans-serif;
       }
-      h1 {
-        color: grey;
-      }
-      a {
-        color: #6186c6;
-        text-decoration: none;
-        line-height: 1.5em;
-      }
-      a:hover {
-        text-decoration: underline;
-      }
-      ul {
-        margin-bottom: 200px;
-      }
-      footer {
-        font-size: small;
-        color: grey;
+      header {
+        background-color: dimgrey;
+        color: white;
+        opacity: 0.4;
+        padding: 1%;
       }
     </style>
   </head>
   <body>
-    under maintenance
+    <header>
+      Serhii. Web developer. Ukraine.
+    </header>
   </body>
 </html>
