--- a/index.html
+++ b/index.html
@@ -2,29 +2,48 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>ermondel github</title>
+    <title>Web developer Serhii</title>
+    <link rel="icon" type="image/png" href="favicon.png" />
     <link rel="stylesheet" href="./normalize.css" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,100,300,700&subset=latin,latin-ext" rel="stylesheet" type="text/css" />
     <style>
       body {
-        background: url('./Kamianets.jpg');
-        font-family: Arial, Helvetica, sans-serif;
+        font-family: roboto, Arial, Helvetica, sans-serif;
       }
-      header {
-        background-color: dimgrey;
-        color: white;
-        opacity: 0.4;
-        padding: 1%;
+      main {
+        max-width: 960px;
+        margin: 0 auto;
+      }
+      img {
+        width: 100%;
+        height: auto;
+        border-bottom-right-radius: 650px 250px;
+        border-bottom-left-radius: 10px 10px;
+      }
+      div {
+        text-align: right;
+        color: LightSlateGray;
+        position: relative;
+        font-size: x-large;
+        font-weight: 300;
+        top: -120px;
+        margin-right: 2%;
+      }
+      address {
+        font-style: normal;
       }
     </style>
   </head>
   <body>
-    <header>
-      Serhii. Web developer. Ukraine.
-    </header>
+    <main>
+      <img src="Kamianets.jpg" alt="Photo of a medieval castle" />
+      <div>
+        <p>Serhii</p>
+        <p>Web developer</p>
+        <address>Ukraine, Kiev</address>
+      </div>
+    </main>
   </body>
 </html>
