feat: add stable version of the gallery

--- a/index.html
+++ b/index.html
@@ -13,22 +13,22 @@
   <body>
     <main>
       <div id="photobox">
-        <img src="./img/Kamianets.jpg" id="photo" alt="Photo of a medieval castle" />
+        <img src="./img/im1.jpg" id="photo" alt="Photo" />
         <div id="btn-gallery">
           <span>&squf;</span><span>&squf;</span><span>&squf;</span> <span>&squf;</span><span>&squf;</span><span>&squf;</span>
           <span>&squf;</span><span>&squf;</span><span>&squf;</span>
         </div>
+        <div id="btn-close">
+          <span>x</span>
+        </div>
         <div id="gallery">
-          <img src="./img/Kamianets.jpg" alt="Photo of a medieval castle" />
-          <img src="./img/Kamianets.jpg" alt="Photo of a medieval castle" />
-          <img src="./img/Kamianets.jpg" alt="Photo of a medieval castle" />
-          <img src="./img/Kamianets.jpg" alt="Photo of a medieval castle" />
-          <img src="./img/Kamianets.jpg" alt="Photo of a medieval castle" />
-          <img src="./img/Kamianets.jpg" alt="Photo of a medieval castle" />
-          <img src="./img/Kamianets.jpg" alt="Photo of a medieval castle" />
-          <img src="./img/Kamianets.jpg" alt="Photo of a medieval castle" />
-          <img src="./img/Kamianets.jpg" alt="Photo of a medieval castle" />
-          <img src="./img/Kamianets.jpg" alt="Photo of a medieval castle" />
+          <img src="./img/im1.jpg" alt="Photo" class="gallery-item" />
+          <img src="./img/im2.jpg" alt="Photo" class="gallery-item" />
+          <img src="./img/im3.jpg" alt="Photo" class="gallery-item" />
+          <img src="./img/im4.jpg" alt="Photo" class="gallery-item" />
+          <img src="./img/im5.jpg" alt="Photo" class="gallery-item" />
+          <img src="./img/im6.jpg" alt="Photo" class="gallery-item" />
+          <img src="./img/im7.jpg" alt="Photo" class="gallery-item" />
         </div>
       </div>
       <div id="info">
@@ -39,6 +39,9 @@
         </div>
       </div>
     </main>
-    <script src="./app.js"></script>
+    <script src="./src/app.js"></script>
+    <script>
+      gallery();
+    </script>
   </body>
 </html>
