feat: add images preload to gallery

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <main>
       <div id="photobox">
-        <img src="./img/im1.jpg" id="photo" alt="Photo" />
+        <img src="./img/im0.jpg" id="photo" alt="Photo" />
         <div id="btn-gallery">
           <span>&squf;</span><span>&squf;</span><span>&squf;</span> <span>&squf;</span><span>&squf;</span><span>&squf;</span>
           <span>&squf;</span><span>&squf;</span><span>&squf;</span>
@@ -21,15 +21,7 @@
         <div id="btn-close">
           <span>x</span>
         </div>
-        <div id="gallery">
-          <img src="./img/im1.jpg" alt="Photo" class="gallery-item" />
-          <img src="./img/im2.jpg" alt="Photo" class="gallery-item" />
-          <img src="./img/im3.jpg" alt="Photo" class="gallery-item" />
-          <img src="./img/im4.jpg" alt="Photo" class="gallery-item" />
-          <img src="./img/im5.jpg" alt="Photo" class="gallery-item" />
-          <img src="./img/im6.jpg" alt="Photo" class="gallery-item" />
-          <img src="./img/im7.jpg" alt="Photo" class="gallery-item" />
-        </div>
+        <div id="gallery"><span>Images are loading, please wait...</span></div>
       </div>
       <div id="info">
         <div id="info-inner">
