feat: add github and linkedin links

--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
           <address>Ukraine, Kiev</address>
         </div>
       </div>
+      <p>
+        <a href="https://www.linkedin.com/in/serhii-h-403150199"><img src="./linkedin_icon.png" alt="linkedin link"/></a>
+        <a href="https://github.com/ermondel"><img src="./github_icon.png" alt="github link"/></a>
+        <!-- linkedin icon from https://www.flaticon.com/authors/google -->
+        <!-- github icon from https://github.com/logos -->
+      </p>
     </main>
     <script src="./src/app.js"></script>
     <script>
