--- a/index.html
+++ b/index.html
@@ -1,12 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-177880035-1"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag('js', new Date());
+      gtag('config', 'UA-177880035-1');
+    </script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Web developer Serhii</title>
     <link rel="icon" type="image/png" href="favicon.png" />
-    <link href="https://fonts.googleapis.com/css?family=Roboto:400,100,300,700&subset=latin,latin-ext" rel="stylesheet" type="text/css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto:400,100,300,700&subset=latin,latin-ext"
+      rel="stylesheet"
+      type="text/css"
+    />
     <link rel="stylesheet" href="./css/normalize.css" />
     <link rel="stylesheet" href="./css/style.css" />
   </head>
@@ -15,7 +31,8 @@
       <div id="photobox">
         <img src="./img/im0.jpg" id="photo" alt="Photo" />
         <div id="btn-gallery">
-          <span>&squf;</span><span>&squf;</span><span>&squf;</span> <span>&squf;</span><span>&squf;</span><span>&squf;</span>
+          <span>&squf;</span><span>&squf;</span><span>&squf;</span>
+          <span>&squf;</span><span>&squf;</span><span>&squf;</span>
           <span>&squf;</span><span>&squf;</span><span>&squf;</span>
         </div>
         <div id="btn-close">
@@ -31,8 +48,12 @@
         </div>
       </div>
       <p>
-        <a href="https://www.linkedin.com/in/serhii-h-403150199"><img src="./linkedin_icon.png" alt="linkedin link"/></a>
-        <a href="https://github.com/ermondel"><img src="./github_icon.png" alt="github link"/></a>
+        <a href="https://www.linkedin.com/in/serhii-h-403150199"
+          ><img src="./linkedin_icon.png" alt="linkedin link"
+        /></a>
+        <a href="https://github.com/ermondel"
+          ><img src="./github_icon.png" alt="github link"
+        /></a>
         <!-- linkedin icon from https://www.flaticon.com/authors/google -->
         <!-- github icon from https://github.com/logos -->
       </p>
