--- a/index.html
+++ b/index.html
@@ -1,66 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <script
-      async
-      src="https://www.googletagmanager.com/gtag/js?id=UA-177880035-1"
-    ></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag('js', new Date());
-      gtag('config', 'UA-177880035-1');
-    </script>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Web developer Serhii</title>
-    <link rel="icon" type="image/png" href="favicon.png" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Roboto:400,100,300,700&subset=latin,latin-ext"
-      rel="stylesheet"
-      type="text/css"
-    />
-    <link rel="stylesheet" href="./css/normalize.css" />
-    <link rel="stylesheet" href="./css/style.css" />
-  </head>
-  <body>
-    <main>
-      <div id="photobox">
-        <img src="./img/im0.jpg" id="photo" alt="Photo" />
-        <div id="btn-gallery">
-          <span>&squf;</span><span>&squf;</span><span>&squf;</span>
-          <span>&squf;</span><span>&squf;</span><span>&squf;</span>
-          <span>&squf;</span><span>&squf;</span><span>&squf;</span>
-        </div>
-        <div id="btn-close">
-          <span>x</span>
-        </div>
-        <div id="gallery"><span>Images are loading, please wait...</span></div>
-      </div>
-      <div id="info">
-        <div id="info-inner">
-          <p>Serhii</p>
-          <p>Web developer</p>
-          <address>Ukraine, Kiev</address>
-        </div>
-      </div>
-      <p>
-        <a href="https://www.linkedin.com/in/serhii-h-403150199"
-          ><img src="./linkedin_icon.png" alt="linkedin link"
-        /></a>
-        <a href="https://github.com/ermondel"
-          ><img src="./github_icon.png" alt="github link"
-        /></a>
-        <!-- linkedin icon from https://www.flaticon.com/authors/google -->
-        <!-- github icon from https://github.com/logos -->
-      </p>
-    </main>
-    <script src="./src/app.js"></script>
-    <script>
-      gallery();
-    </script>
-  </body>
-</html>
+<!DOCTYPE html><html lang="en"><head><script async src="https://www.googletagmanager.com/gtag/js?id=UA-177880035-1"></script><script>function gtag(){dataLayer.push(arguments)}window.dataLayer=window.dataLayer||[],gtag("js",new Date),gtag("config","UA-177880035-1")</script><meta charset="UTF-8"><link rel="shortcut icon" href="favicon.ico"><meta name="viewport" content="width=device-width,initial-scale=1"><meta name="description" content="Serhii - Web Developer"><title>Serhii - Web Developer</title><link rel="icon" href="favicon.ico"><link href="main.18efc7fd50dbb7f91307.css" rel="stylesheet"></head><body><div class="container"><header class="header"><div class="header__img"><img src="assets/images/main_image.jpg" alt="Photo of the forest" class="header__img" id="main_image"></div><div class="about"><h1 class="about__txt">Serhii</h1><h2 class="about__txt">Web developer</h2><p class="about__txt">Ukraine, Kiev</p></div></header><main class="main"><div class="gallery__cnt-open"></div><div class="gallery"><div class="gallery__pbar"><div class="gallery__pbar-content"><img src="assets/images/spinner.svg" alt="loading bar"></div><div class="gallery__pbar-counter">0/0</div></div><div class="gallery__list"></div><div class="gallery__cnt-close"><button class="gallery__btn-close">close</button></div></div></main><footer class="footer"><div class="icons"><a href="https://www.linkedin.com/in/serhii-h-403150199" class="icons__link" target="_blank" rel="noreferrer" id="linkedin-link"><img src="assets/images/linkedin_icon.png" class="icons__img" alt="linkedin link" width="32"></a><a href="https://github.com/ermondel" class="icons__link" target="_blank" rel="noreferrer" id="github-link"><img src="assets/images/github_icon.png" class="icons__img" alt="github link" width="32"></a><a href="mailto:ermondel@protonmail.com" class="icons__link" target="_blank" rel="noreferrer" id="email-link"><img src="assets/images/email_icon.png" class="icons__img" alt="email link" width="32"></a></div></footer></div><script src="vendors~main.18efc7fd50dbb7f91307.js"></script><script src="main.18efc7fd50dbb7f91307.js"></script></body></html>
